--- a/app/editor/style.module.css
+++ b/app/editor/style.module.css
@@ -104,3 +104,33 @@
   border-radius: 4px;
   color: #000000;
 }
+
+.totalCashNode {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  background-color: #f2f2f2;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  color: #000000;
+  height:180px;
+}
+
+.handleContainer {
+  display: flex;
+}
+
+.totalCashContent {
+  margin: 10px 0;
+  text-align: center;
+}
+
+.totalCashContent div:first-child {
+  font-weight: bold;
+}
+
+.totalCashContent div:last-child {
+  margin-top: 5px;
+}
